--- a/app/package.json
+++ b/app/package.json
@@ -61,6 +61,7 @@
     "electron": "21.4.2",
     "electron-builder": "^23.3.3",
     "encoding": "^0.1.13",
+    "esbuild-loader": "^3.0.1",
     "eslint": "^8.19.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
