--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,10 @@ jobs:
       - id: thislatestR
         uses: pozetroninc/github-action-get-latest-release@master
         with:
-          owner: siyuan-note
-          repo: siyuan
+          # owner: siyuan-note
+          # repo: siyuan
+          repository: ${{ github.repository }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           excludes: prerelease, draft
 
       - name: Gather Release Information
