--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
   "packageManager": "pnpm@8.2.0",
   "scripts": {
     "lint": "eslint . --fix --cache",
-    "dev": "webpack --mode development",
+    "dev": "npm run dev:base & npm run start",
+    "dev:base": "webpack --mode development",
     "dev:mobile": "webpack --mode development --config webpack.mobile.js",
     "dev:desktop": "webpack --mode development --config webpack.desktop.js",
     "dev:export": "webpack --mode development --config webpack.export.js",
