--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,7 @@
     "build:mobile": "webpack --mode production --config webpack.mobile.js",
     "build:desktop": "webpack --mode production --config webpack.desktop.js",
     "build:export": "webpack --mode production --config webpack.export.js",
-    "start": "NODE_ENV=development electron ./electron/main.js",
+    "start": "cross-env NODE_ENV=development electron ./electron/main.js",
     "dist-appx": "ELECTRON_MIRROR=https://cnpmjs.org/mirrors/electron/ electron-builder --config electron-appx-builder.yml",
     "dist": "ELECTRON_MIRROR=https://cnpmjs.org/mirrors/electron/ electron-builder --config electron-builder.yml --publish=never",
     "dist-darwin": "ELECTRON_MIRROR=https://cnpmjs.org/mirrors/electron/ electron-builder --mac --config electron-builder-darwin.yml --publish=never",
@@ -52,6 +52,7 @@
     "@typescript-eslint/parser": "^5.30.6",
     "blueimp-md5": "^2.19.0",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "dayjs": "^1.11.5",
     "electron": "25.7.0",
@@ -75,6 +76,7 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "@electron/remote": "^2.0.9"
+    "@electron/remote": "^2.0.9",
+    "electron": "^26.2.0"
   }
 }
