--- a/app/package.json
+++ b/app/package.json
@@ -55,7 +55,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "dayjs": "^1.11.5",
-    "electron": "25.7.0",
+    "electron": "^25.7.0",
     "electron-builder": "^24.6.3",
     "encoding": "^0.1.13",
     "esbuild-loader": "^3.0.1",
